--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>CalculateExpress</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-site-verification" content="O2QkssZfWtjEBcaSjNOnuGjCyW9qqBIAq32Oy9hgtnM" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
